# Dimatech_test_task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi-application/: .env.dev  main.py
fastapi-application/alembic/versions/: 2025_03_02_2218-2be251b96f59_create_users_table.py  2025_03_02_2238-a6052d688dfa_create_users_table.py
fastapi-application/core/: config.py
fastapi-application/core/models/: user.py
fastapi-application/core/schemas/: user.py
