[project]
name = ""
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "uvicorn[standard]>=0.29.0,<0.30",
    "pydantic[email]>=2.7.1,<3",
    "pydantic-settings>=2.2.1,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29.0,<0.30",
    "alembic>=1.13.1,<2",
    "gunicorn>=23.0.0,<24",
    "passlib>=1.7.4",
]

[dependency-groups]
dev = ["black>=24.4.2,<25"]

[tool.uv]
package = false

